package fr.football.patterns.observer;

public interface MatchObserver {
    void update(String message);
}
